# controller/testReader.controller.ts
@@ -1,5 +1,6 @@
 import exp from "constants";
 import { Request, Response } from "express";
+import Esales from "../model/esales.model";
 
 export const processTextFile = async (
   req: Request,
@@ -94,29 +95,29 @@ export const processTextFile = async (
     });
 
     // Function to identify missing invoice numbers
-    const findMissingInvoices = (invoices: string[]) => {
-      const missing = [];
-      const prefix = invoices[0].slice(0, invoices[0].lastIndexOf("-") + 1);
-      const numericInvoices = invoices.map((inv) =>
-        parseInt(inv.split("-").pop()!, 10)
-      );
-      numericInvoices.sort((a, b) => a - b);
+    // const findMissingInvoices = (invoices: string[]) => {
+    //   const missing = [];
+    //   const prefix = invoices[0].slice(0, invoices[0].lastIndexOf("-") + 1);
+    //   const numericInvoices = invoices.map((inv) =>
+    //     parseInt(inv.split("-").pop()!, 10)
+    //   );
+    //   numericInvoices.sort((a, b) => a - b);
 
-      for (let i = 1; i < numericInvoices.length; i++) {
-        const prev = numericInvoices[i - 1];
-        const curr = numericInvoices[i];
-        for (let j = prev + 1; j < curr; j++) {
-          missing.push(prefix + j.toString().padStart(4, "0"));
-        }
-      }
-      return missing;
-    };
+    //   for (let i = 1; i < numericInvoices.length; i++) {
+    //     const prev = numericInvoices[i - 1];
+    //     const curr = numericInvoices[i];
+    //     for (let j = prev + 1; j < curr; j++) {
+    //       missing.push(prefix + j.toString().padStart(4, "0"));
+    //     }
+    //   }
+    //   return missing;
+    // };
 
     // Convert the Set to an array and sort it
     const sortedInvoices = Array.from(transactionSet).sort();
 
     // Identify missing invoice numbers
-    const missingInvoices = findMissingInvoices(sortedInvoices);
+    // const missingInvoices = findMissingInvoices(sortedInvoices);
 
     // Calculate the total sum of negative values
     const negativeSum = negativeValues
@@ -140,8 +141,8 @@ export const processTextFile = async (
       total: (vatable + vatExempt + zeroRated + government + vat12).toFixed(2),
       negativeCount: negativeValues.length, // Count of negative values
       negativeTotal: negativeSum, // Sum of negative values,
-      missingInvoices, // List of missing invoice numbers
-      missingInvoiceCount: missingInvoices.length, // Count of missing invoices
+      // missingInvoices, // List of missing invoice numbers
+      // missingInvoiceCount: missingInvoices.length, // Count of missing invoices
     };
 
     res.status(200).json(response);
@@ -262,27 +263,27 @@ export const processTextFileERP = async (
       }
     });
 
-    const findMissingInvoicesERP = (invoices: string[]) => {
-      const missing = [];
-      const prefix = invoices[0].slice(0, invoices[0].lastIndexOf("-") + 1);
-      const numericInvoices = invoices.map((inv) =>
-        parseInt(inv.split("-").pop()!, 10)
-      );
-      numericInvoices.sort((a, b) => a - b);
+    // const findMissingInvoicesERP = (invoices: string[]) => {
+    //   const missing = [];
+    //   const prefix = invoices[0].slice(0, invoices[0].lastIndexOf("-") + 1);
+    //   const numericInvoices = invoices.map((inv) =>
+    //     parseInt(inv.split("-").pop()!, 10)
+    //   );
+    //   numericInvoices.sort((a, b) => a - b);
 
-      for (let i = 1; i < numericInvoices.length; i++) {
-        const prev = numericInvoices[i - 1];
-        const curr = numericInvoices[i];
-        for (let j = prev + 1; j < curr; j++) {
-          missing.push(prefix + j.toString().padStart(8, "0"));
-        }
-      }
-      return missing;
-    };
+    //   for (let i = 1; i < numericInvoices.length; i++) {
+    //     const prev = numericInvoices[i - 1];
+    //     const curr = numericInvoices[i];
+    //     for (let j = prev + 1; j < curr; j++) {
+    //       missing.push(prefix + j.toString().padStart(8, "0"));
+    //     }
+    //   }
+    //   return missing;
+    // };
 
     // Convert the Set to an array and sort it
     const sortedInvoices = Array.from(transactionSet).sort();
-    const missingInvoices = findMissingInvoicesERP(sortedInvoices);
+    // const missingInvoices = findMissingInvoicesERP(sortedInvoices);
     // Calculate the total sum
     const grandTotal = vatable + vatExempt + zeroRated + government + vat12;
     const netTotal = vatable + vatExempt + zeroRated + government;
@@ -308,18 +309,75 @@ export const processTextFileERP = async (
       zeroRated: zeroRated.toFixed(2),
       government: government.toFixed(2),
       vat12: vat12.toFixed(2),
-      netTotal: netTotal.toFixed(2), 
-      grandTotal: grandTotal.toFixed(2), 
-      negativeCount: negativeValues.length, 
-      negativeTotal: negativeSum, 
-      missingInvoices, 
-      missingInvoiceCount: missingInvoices.length, 
+      netTotal: netTotal.toFixed(2),
+      grandTotal: grandTotal.toFixed(2),
+      negativeCount: negativeValues.length,
+      negativeTotal: negativeSum,
+      // missingInvoices,
+      // missingInvoiceCount: missingInvoices.length,
     };
 
     // Send the response
     res.status(200).json(response);
   } catch (error) {
     console.error("Error processing file:", error);
+    res.status(500).json({ error: "Internal Server Error" });
+  }
+};
+
+export const createEsales = async (
+  req: Request,
+  res: Response
+): Promise<void> => {
+  try {
+    let esalesData = req.body;
+
+    const esalesDataDate = esalesData.tableRows[0].textValue;
+    const esalesDataBranch = esalesData.tableRows[1].textValue;
+
+    esalesData.branch = esalesDataBranch;
+    esalesData.date = esalesDataDate;
+
+    // Check for duplicate branch and date
+    const existingEsales = await Esales.findOne({
+      branch: esalesDataBranch,
+      date: esalesDataDate,
+    });
+
+    if (existingEsales) {
+      res.status(400).json({
+        success: false,
+        message:
+          "Duplicate entry: eSales data for this branch and date already exists",
+      });
+      return;
+    }
+
+    const newEsales = new Esales(esalesData);
+    await newEsales.save();
+    res.status(200).json({
+      success: true,
+      data: newEsales,
+      message: "eSales data saved successfully",
+    });
+  } catch (error) {
+    console.error("Error saving esales data:", error);
+    res.status(500).json({ error: "Internal Server Error" });
+  }
+};
+
+export const getEsales = async (
+  req: Request,
+  res: Response
+): Promise<void> => {
+  try {
+    const esalesData = await Esales.find();
+    res.status(200).json({
+      success: true,
+      data: esalesData,
+    });
+  } catch (error) {
+    console.error("Error fetching esales data:", error);
     res.status(500).json({ error: "Internal Server Error" });
   }
 };
