# routes/auth-route.ts
@@ -1,0 +1,6 @@
+import { Router, Request, Response } from 'express';
+import { login } from '../controller/auth.controller';
+
+export const authRouter = Router();
+
+authRouter.post('/login', login);
